--- a/pawnpwn.css
+++ b/pawnpwn.css
@@ -11,7 +11,6 @@ body
 }
 body.fail { background-color: white; font-size: 18px; }
 
-
 .wall, .pawn { position: absolute; z-index: 1002; }
 .grabbing { z-index: 1003; }
 #pfAppPanel{ z-index: 9; }
@@ -24,14 +23,23 @@ div.board
   z-index: 1000;
 }
 div.board img.board { position: absolute; z-index: 1; }
+div.gradient { position: absolute; z-index: 2; background-image: images/gradient.png; height: 100%; width: 10px; top: 0px; left: 10px; }
+body.landscape:not(.mini-landscape) .gradient { display: block; }
+body.landscape.mini-landscape .gradient { display: none; }
+body.portrait .gradient { display: none; }
+
+
 div.info { position: absolute; overflow: hidden; }
 h1
 {
+  z-index: 1;
   margin: 0;
   color: #DDD;
   font-weight: bold;
   text-align: center;
+  text-decoration: underline;
 }
+h1:hover { cursor: pointer; }
 
 body.mini-landscape #pfAppBar { display: none; }
 body.mini-portrait #pfAppBar { display: none; }
