--- a/pawnpwn.css
+++ b/pawnpwn.css
@@ -1,8 +1,8 @@
 body
 {
   position: relative;
-  background-color: #444;
   margin: 0;
+  background-color: #444;
   overflow: hidden;
   user-select: none; 
   -o-user-select: none; 
@@ -11,6 +11,7 @@ body
   -webkit-user-select: none; 
 }
 body.noAppBar #pfAppBar { display: none; }
+body.noAppBar { margin-top: 0; }
 
 body.fail { background-color: white; font-size: 18px; }
 
@@ -20,11 +21,12 @@ body.three .graph { display: none; }
 body.one .movelist { display: none; }
 
 
+
 div.gradientv { position: absolute; z-index: 5; background-image: url('images/gradientv.png'); width: 10px; }
 div.gradienth { position: absolute; z-index: 5; background-image: url('images/gradienth.png'); height: 10px; }
 body.one .gradienth { display: none; }
 body.two .gradienth { display: none; }
-body.three .gradienth { display: none; } 
+body.three .gradienth { display: none; }
 body.three .gradientv { display: none; }
 body.four .gradientv { display: none; }
 
@@ -47,7 +49,7 @@ div.tableDiv
   margin: 5px;
   position: relative;
   overflow: hidden;
-  background-color: #666;
+  background-color: #9e9e9e;
   width: 100%;
 }
 
@@ -65,20 +67,22 @@ body.mini-landscape #title { font-size: 20px; text-align: left; line-height: 35p
 body.portrait #title { position: absolute; line-height: 40px; }
 
 
-.divButtons { position: absolute; height: 20px; width: 60px; }
-.button { height: 20px; width: 20px; float: left; }
-#moveNum { float: left; height: 20px; width: 20px; text-align: center; margin: 0; line-height: 20px;
-	font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: white; font-weight: bold; }
+.divButtons { position: absolute; height: 40px; width: 175px; }
+.button { height: 30px; width: 30px; float: left; margin: 5px 10px; }
+.fwd { float: right; }
+#moveNum { float: left; height: 30px; width: 75px; text-align: center; margin: 5px 0 0 0; line-height: 30px;
+	font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #fff; font-weight: bold; }
 
 
-body.one.noAppBar {}
 
 
-
-#text { height: 30px; width: 70px; overflow: hidden; float: left; }
-h1 { margin: 0; color: #DDD; width: 85px; font-size: 16px; font-weight: bold; text-align: left; line-height: 30px; }
-.title .about { margin: 5px; }
-.title .sign-in { margin: 5px 5px 5px 0; float: right; }
+.text { height: 30px; width: 110px; overflow: hidden; float: left; }
+body.noAppBar .text { display: none; }
+h1 { margin: 5px 0 5px 0; color: #DDD; width: 120px; font-size: 24px; font-weight: bold; text-align: left; line-height: 30px; }
+.about { margin: 5px 5px 5px 0; float: right; }
+body.noAppBar .about { float: left; }
+.sign-in { display: none; }
+body.noAppBar .sign-in { margin: 5px 5px 5px 0; float: right; display: block; }
 
 
 
@@ -120,15 +124,15 @@ body.portrait #divGraph { display: none; }
 */
 
 
-.historyTable { margin-left: 5px; margin-right: 5px; color: #252525; }
+.historyTable { margin-left: 5px; margin-right: 5px; color: #252525; font-size: 18px;}
 .historyTable .portrait { display: none; }
 .historyTable { border-collapse: collapse; }
-.historyTable th[scope=col] { width: 75px; text-align: left; font-weight: bold; border-bottom: 1px solid black; }
+.historyTable th[scope=col] { width: 75px; text-align: left; border-bottom: 1px solid black; }
 .historyTable th[scope=maincol] { width: 30px; border-bottom: 1px solid black; }
 .historyTable th[scope=row] { text-align: right; }
-.historyTable td { text-align: left; }
+.historyTable td { text-align: left; font-weight: bold; }
 .historyTable th[scope="past"] { color: #616161; text-align: right; }
-.historyTable td[scope="past"] { color: #616161; text-align: center; }
+.historyTable td[scope="past"] { color: #616161; text-align: left; }
 /*
 div.hidden-div { position: absolute; overflow: hidden; }
 
