--- a/pawnpwn.css
+++ b/pawnpwn.css
@@ -1,6 +1,5 @@
 body
 {
-  position: relative;
   margin: 0;
   background-color: #444;
   overflow: hidden;
@@ -46,7 +45,7 @@ div.graph canvas { margin: 5px; }
 div.movelist { position: absolute; }
 div.tableDiv
 {
-  margin: 5px;
+  margin: 0 5px;
   position: relative;
   overflow: hidden;
   background-color: #9e9e9e;
@@ -67,22 +66,22 @@ body.mini-landscape #title { font-size: 20px; text-align: left; line-height: 35p
 body.portrait #title { position: absolute; line-height: 40px; }
 
 
-.divButtons { position: absolute; height: 40px; width: 175px; }
-.button { height: 30px; width: 30px; float: left; margin: 5px 10px; }
+.divButtons { position: absolute; height: 40px; width: 175px; margin: 0 5px;}
+.button { height: 30px; width: 30px; float: left; margin: 5px 0; }
 .fwd { float: right; }
-#moveNum { float: left; height: 30px; width: 75px; text-align: center; margin: 5px 0 0 0; line-height: 30px;
+#moveNum { float: left; height: 30px; width: 105px; text-align: center; margin: 5px 5px; line-height: 30px;
 	font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #fff; font-weight: bold; }
 
 
 
 
-.text { height: 30px; width: 110px; overflow: hidden; float: left; }
+.text { height: 40px; width: 175px; float: left; position: relative; margin-bottom: -5px; }
 body.noAppBar .text { display: none; }
-h1 { margin: 5px 0 5px 0; color: #DDD; width: 120px; font-size: 24px; font-weight: bold; text-align: left; line-height: 30px; }
-.about { margin: 5px 5px 5px 0; float: right; }
-body.noAppBar .about { float: left; }
+h1 { margin: 0; color: #DDD; width: 195px; left: -10px; font-size: 34px; font-weight: bold; text-align: center; line-height: 40px; position: relative; }
+.about { margin: 5px; float: right; }
+body.noAppBar .about { margin: 5px 5px 5px 10px; }
 .sign-in { display: none; }
-body.noAppBar .sign-in { margin: 5px 5px 5px 0; float: right; display: block; }
+body.noAppBar .sign-in { margin: 5px; float: right; display: block; }
 
 
 
@@ -124,7 +123,7 @@ body.portrait #divGraph { display: none; }
 */
 
 
-.historyTable { margin-left: 5px; margin-right: 5px; color: #252525; font-size: 18px;}
+.historyTable { margin-left: 5px; margin-right: 5px; color: #252525; font-size: 18px; font-family: Arial, Helvetica, sans-serif; }
 .historyTable .portrait { display: none; }
 .historyTable { border-collapse: collapse; }
 .historyTable th[scope=col] { width: 75px; text-align: left; border-bottom: 1px solid black; }
