--- a/pawnpwn.css
+++ b/pawnpwn.css
@@ -40,12 +40,11 @@ div.board div { position: absolute; z-index: 1; }
 
 
 div.graph { position: absolute; }
-div.graph canvas { margin: 5px; }
+div.graph canvas { }
 
 div.movelist { position: absolute; }
 div.tableDiv
 {
-  margin: 0 5px;
   position: relative;
   overflow: hidden;
   background-color: #9e9e9e;
@@ -66,22 +65,25 @@ body.mini-landscape #title { font-size: 20px; text-align: left; line-height: 35p
 body.portrait #title { position: absolute; line-height: 40px; }
 
 
-.divButtons { position: absolute; height: 40px; width: 175px; margin: 0 5px;}
-.button { height: 30px; width: 30px; float: left; margin: 5px 0; }
+.divButtons { position: absolute; height: 30px; width: 175px; }
+.button { height: 30px; width: 30px; float: left; }
 .fwd { float: right; }
-#moveNum { float: left; height: 30px; width: 105px; text-align: center; margin: 5px 5px; line-height: 30px;
+#moveNum { float: left; height: 30px; width: 115px; text-align: center; line-height: 30px;
 	font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #fff; font-weight: bold; }
 
 
 
 
-.text { height: 40px; width: 175px; float: left; position: relative; margin-bottom: -5px; }
+.text { height: 40px; width: 175px; float: left; position: relative; }
 body.noAppBar .text { display: none; }
 h1 { margin: 0; color: #DDD; width: 195px; left: -10px; font-size: 34px; font-weight: bold; text-align: center; line-height: 40px; position: relative; }
-.about { margin: 5px; float: right; }
-body.noAppBar .about { margin: 5px 5px 5px 10px; }
+
+
+.aboutsi { height: 30px; width: 175px; position: absolute; }
+.about { float: right; }
+body.noAppBar .about { margin-left: 15px; }
 .sign-in { display: none; }
-body.noAppBar .sign-in { margin: 5px; float: right; display: block; }
+body.noAppBar .sign-in { float: right; display: block; }
 
 
 
@@ -123,10 +125,10 @@ body.portrait #divGraph { display: none; }
 */
 
 
-.historyTable { margin-left: 5px; margin-right: 5px; color: #252525; font-size: 18px; font-family: Arial, Helvetica, sans-serif; }
+.historyTable { color: #252525; font-size: 18px; font-family: Arial, Helvetica, sans-serif; }
 .historyTable .portrait { display: none; }
 .historyTable { border-collapse: collapse; }
-.historyTable th[scope=col] { width: 75px; text-align: left; border-bottom: 1px solid black; }
+.historyTable th[scope=col] { width: 80px; text-align: left; border-bottom: 1px solid black; }
 .historyTable th[scope=maincol] { width: 30px; border-bottom: 1px solid black; }
 .historyTable th[scope=row] { text-align: right; }
 .historyTable td { text-align: left; font-weight: bold; }
